# sngnn

./: README.md  SNGNN_PARAMETERS.prms  sndgAPI.py  socnav.py  train.py
SNGNN-RL/: README.md
SNGNN-RL/agent/: agent.py
SNGNN-RL/controllers/simulator_supervisor_cpp/src/: ByteSequencePublisher.cpp  ByteSequencePublisher.h  CMakeLists.txt  CommonBehavior.cpp  CommonBehavior.h  GenericBase.cpp  GenericBase.h  Goal.cpp  Goal.h  GoalPublisher.cpp  GoalPublisher.h  Human.cpp  Human.h  InteractionDetector.cpp  InteractionDetector.h  InteractionDetector.ice  JoystickAdapter.cpp  JoystickAdapter.h  JoystickAdapter.ice  ObjectDetector.cpp  ObjectDetector.h  ObjectDetector.ice  Obstacle.cpp  Obstacle.h  OmniRobot.cpp  OmniRobot.h  PeopleDetector.cpp  PeopleDetector.h  Relation.cpp  Relation.h  RobotNode.cpp  RobotNode.h  Simulator.cpp  Simulator.h  Wall.cpp  Wall.h  WallDetector.cpp  WallDetector.h  WebotsAPI.cpp  WebotsAPI.h  (+17 more)
SNGNN-RL/protos/: Robot.wbo  Robot2.wbo  Robot_full.wbo  TiagoIron.wbo  desk_base.wbo  goal_base.wbo  goal_base2.wbo  pedestrian_base.wbo  plant_base.wbo  relation_base.wbo  wall_base.wbo
SNGNN-RL/worlds/: .world.wbproj  .world2.wbproj  .world3.wbproj  world.wbt  world2.wbt  world3.wbt
SONATA/: README.md  joystick.sh  kill.sh  run.sh  simulator.sh
SONATA/controller/: CMakeLists.txt  README.md  controller.cdsl
SONATA/interfaces/: ByteSequencePublisher.idsl  GoalPublisher.idsl  InteractionDetector.idsl  ObjectDetector.ice  ObjectDetector.idsl  PeopleDetector.idsl  SNGNN2D.idsl  Simulator.idsl  WallDetector.idsl
SONATA/joystick/: CMakeLists.txt  README.md  joystick.cdsl
SONATA/python/: coppeliasimapi2.py  drawJSON.py  drawJsonInSeries.py  sonata.py  youbot.py
SONATA/scenes/: Bill_on_simple_path.ttm  dataset.ttt  dataset_lowres.ttt  dataset_midres.ttt  simple_path.csv  small_table.ttm
SONATA/simulator/: CMakeLists.txt  README.md  run.sh  simulator.cdsl
SONATA/usecase/: drawGraph.py  mirroring_data.py  (+5 more)
models/: gat.py  gcn.py  pg_gat.py  pg_ggn.py  pg_rgcn.py  pg_rgcn_gat.py
scenario_editor/: README.md  sndg.py
sngnn1D/: SNGNN_PARAMETERS.prms  example.py  sndgAPI.py  socnav.py
(+137 files in other folders)
